--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
+        "php": ">=7.0.0",
         "smarty/smarty": "^3.1",
         "dannyvankooten/php-router": "^1.1@alpha",
         "hybridauth/hybridauth": "^2.7"
